--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-langchain==0.3.7
-langchain_community==0.3.5
-langchain_core==0.3.15
-PyPDF2==3.0.1
+boto3==1.35.57
+fastapi==0.115.6
+fitz==0.0.1.dev2
+langchain==0.3.9
+langchain_aws==0.2.9
+langchain_core==0.3.21
+langchain_groq==0.2.1
+langchain_huggingface==0.1.2
+langgraph==0.2.56
+pydantic==2.10.3
+pymongo==4.10.1
 python-dotenv==1.0.1
-sentence-transformers==3.0.1
-langgraph==0.2.45
+python_dateutil==2.8.2
+python_dateutil==2.9.0.post0
+pytz==2024.1
+Requests==2.32.3
+typing_extensions==4.12.2
+uvicorn==0.32.1
 pymupdf
