--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build Docker image
         run: |
           SHORT_SHA=${GITHUB_SHA::7}
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/resume_assistant:latest.
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/resume_assistant:latest
           
       - name: Push Docker image
         run: |
